# element

./: .docs-composerrc.mts  .releaserc.js  CHANGELOG.md  CONTRIBUTING.md  angular.json  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-and-test.yaml  next-release.yaml  publish-documentation.yaml  release.yaml
docs/: README.md
docs/architecture/: css-framework.md  theming.md
docs/components/: index.md
docs/components/charts/: index.md
docs/components/dashboards/: flexible-dashboards.md
docs/components/forms-inputs/: phone-number-input.md  photo-upload.md
docs/components/maps/: maps.md
docs/fundamentals/: localization.md  typography.md
docs/fundamentals/colors/: ui-colors.md
playwright/snapshots/dashboard.spec.ts-snapshots/: dashboard--contact-widget.yaml  dashboard--delete-confirmation-dialog.yaml  dashboard--delete.yaml  dashboard--hello-world.yaml  dashboard--mobile.yaml  dashboard--normal.yaml  (+1 more)
projects/charts-ng/: package.json
projects/dashboards-demo/: package.json
projects/dashboards-ng/: package.json
projects/element-docs-builder/: package.json  pyproject.toml
projects/element-docs-builder/md_extension_element_docs_composer/: extension.py
projects/element-docs-builder/mkdocs_element_docs_builder/: .gitignore  JAVASCRIPT_LICENSE  javascript  package.json  plugin.py
projects/element-ng/: docs.ts  eslint.config.js  package.json
projects/element-theme/: package.json
projects/element-translate-cli/: package.json
projects/element-translate-ng/: eslint.config.js  package.json
projects/live-preview/: eslint.config.js  package.json
projects/maps-ng/: package.json
projects/native-charts-ng/: README.md  package.json
src/: styles.scss
src/app/: app.config.ts
(+6 files in other folders)
