[project]
name = "element"
version = "0.0.0"
description = "Siemens Element design system documentation."
authors = [{ name = "Siemens", email = "opensource@siemens.com" }]
license = "MIT"
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "mkdocs-material>=9.0.0,<10",
    "mkdocs-minify-html-plugin==0.3.4",
    "mkdocs-element-docs-builder",
]

[project.urls]
Homepage = "https://element.siemens.io"
Repository = "https://github.com/Killusions/element.git"
Documentation = "https://element.siemens.io"

[tool.uv]
package = false

[tool.uv.sources]
mkdocs-element-docs-builder = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "projects/element-docs-builder",
]
