[project]
name = "mkdocs_element_docs_builder"
version = "1.0.0"
description = "Element Design System documentation and core components for web applications."
authors = [{ name = "Siemens", email = "opensource@siemens.com" }]
license = "MIT"
requires-python = "~=3.11"
readme = "../../README.md"
homepage = "https://github.com/siemens/element"
repository = "https://github.com/siemens/element.git"
documentation = "https://element.siemens.io"
dependencies = [
    "javascript>=1!1.2.2",
]

[project.entry-points."mkdocs.plugins"]
element-docs-builder = "mkdocs_element_docs_builder.plugin:ElementDocsBuilderPlugin"

[project.entry-points."markdown.extensions"]
element-docs = "md_extension_element_docs.extension:ElementDocsExtension"
simpl-docs-composer-extension = "md_extension_simpl_docs_composer.extension:DocsComposerExtension"

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
